# example-beam-python

./: README.md  pyproject.toml
src/example_beam_python/: __init__.py
src/example_beam_python/io/: __init__.py
src/example_beam_python/pipelines/: __init__.py  batch_pipeline.py  streaming_pipeline.py
tests/: __init__.py  test_batch_pipeline.py  test_streaming_pipeline.py
