[project]
name = "example-beam-python"
version = "0.1.0"
description = "Example Apache Beam Python pipelines"
readme = "README.md"
license = "Apache-2.0"
requires-python = "~=3.12.0"
dependencies = [
    "apache-beam[gcp]==2.69.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_beam_python"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "ARG", # flake8-argument-names    
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes    
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

[tool.ruff.lint.isort]
known-first-party = ["example_beam_python"]
